- Support for Kazakhstan #534 (chiuczek, intelliHugh)
- Support for Azerbaijan #540 (eldar-mustafayev)
- Support for Tunisia #543 (ihebski)
- Support for Taiwan #547 (ifurther)
- Support for North Macedonia #570 (tserekh)
- Support for Ethiopia #558 (tedtad, dr-p)
- Travis CI removal #557 (mborsetti, dr-p)
- More useful __repr__ and __str__ #360 (dr-p, kootenpv, d33tah)
- Czech (ie: misspelled Czechia) deprecated support removed (dr-p)

- Test coverage improvement (dr-p)
- Date slices support fix #529, #530 (justinwaf, mborsetti, dr-p)
- Doc fixes #549 (canute24)
- UK standalone states deprecation #566 (dr-p)
- Venezuela ISO code fix #567 (Skatox, dr-p)
- Canada updates and test review #533, #536 (cturra)
- US updates and fixes #537, #559 (khawley, evohnave, dr-p)
- India fixes #553, #554, #539 (canute24, dr-p)
- Spain fixes #555 (tserekh)
- Italy fixes #546 (dr-p, rtraverso86)
- Korea fixes #535 (0xF4D3C0D3)
- Colombia fixes #564 (jahirfiquitiva)

Version 0.11.3.1
================

Released September 29, 2021

- Support for Zambia #495, #496 (engineervix)
- Support for Uruguay #489, #490, #491, #492, #493 (jemazzeo, dr-p)
- Support for Lesotho #512 (pietervdw115)
- Support for Namibia #513 (pietervdw115)
- Support for Swaziland #514 (pietervdw115)
- Support for Zimbabwe #517 (pietervdw115)
- Support for China #515 (tserekh)
- Refactor lunisolar and islamic calendar #524 (mborsetti)
- Removed six dependency #494 (mborsetti)
- Type hinting #497, #498 (mborsetti)
- Malaysia refactoring & updates #524 (mborsetti)
- New Zealand updates #499 (36wish)
- USA, Angola fixes (jusce17)
- Kenya updates #502 (MainaKamau92)
- Korea updates #508 (0xF4D3C0D3, dr-p)
- Bulgaria updates #509 (BasakUlker, dr-p)
- Australia updates #516 (cmckeague)
- South Africa updates (lispwarez, dr-p)
- Canada updates #457 (dr-p)
- PRTE (PortugalExt) fix #520 (dr-p)
- Norway updates #472 (dr-p)
- Chile updates #473 (dr-p)
- Australia updates #525 (jeremychrimes)