@@ -73,7 +73,7 @@ from .north_macedonia import NorthMacedonia, MK, MKD
 from .norway import Norway, NO, NOR
 from .paraguay import Paraguay, PY, PRY
 from .peru import Peru, PE, PER
-from .poland import Poland, Polish, PL, POL
+from .poland import Poland, PL, POL
 from .portugal import Portugal, PT, PRT, PortugalExt, PTE, PRTE
 from .romania import Romania, RO, ROU
 from .russia import Russia, RU, RUS
