@@ -12,7 +12,8 @@ Released ???????? ???, ????
 - Support for Ethiopia #558 (tedtad, dr-p)
 - Travis CI removal #557 (mborsetti, dr-p)
 - More useful __repr__ and __str__ #360 (dr-p, kootenpv, d33tah)
-- Czech (ie: misspelled Czechia) deprecated support removed (dr-p)
+- Support for Czech (ie: misspelled Czechia) drop (dr-p)
+- Support for Polish (ie: misspelled Poland) drop (dr-p)
 
 - Test coverage improvement (dr-p)
 - Date slices support fix #529, #530 (justinwaf, mborsetti, dr-p)
